lldpd (0.8.0)
  * Change:
    + Fix minimal kernel version to 2.6.39. Add a runtime warning when
      this is not the case.
    + Don't discard down interfaces. Notably, this enables us to keep
      their specific configuration if any.
    + For Linux, switch to libnl3. Be aware of the licensing issues in
      case of static linking.
    + Introduce the notion of default local port. New interfaces will
      use it as a base. This allows setting various MED stuff.
    + Provide an apparmor profile (untested).

lldpd (0.7.17)
  * Fix:
    + Fix an infinite loop when using veth on Linux 4.1+ kernels.
    + Make CDP advertise the appropriate kernel name as platform,
      not just "Linux".
  * Change:
    + Fix the way libevent configure is called.

lldpd (0.7.16)
  * Change:
    + For Linux, 2.6.32 is now the minimal required kernel. When using
      an older kernel, use `--enable-oldies`.
    + For Linux, use netlink to retrieve information about bridges,
      VLAN and bonds. The code was contributed by Cumulus Networks.
  * Features:
    + Use symbol versioning for liblldpctl.so.
    + Ability to get local chassis information with "show
      chassis".
    + The library also has the same ability with the
      `lldpctl_get_local_chassis()` function. It is also possible to
      get a chassis atom from a port with `lldpctl_k_port_chassis`
      key. This is now the preferred way to retrieve chassis related
      information.
  * Fix:
    + Fix build on OS X.
    + Accept "language" when configuring MED location as a civic address.

lldpd (0.7.15)
  * Features:
    + Optional features can be configured with "auto" to autodetect if
      they are usable. This is the default value for JSON and XML support.
    + Ability to send and decode custom/unknown TLV. Thanks to Alexandru
      Ardelean.
  * Change:
    + Modify checksum function. While this should be strictly
      equivalent, if you notice CDP packets not accepted anymore, this